 - Fix when a client that takes too long to connect can potentially trigger a desync.
   https://github.com/beyond-all-reason/spring/issues/1406
 - Prevent logging general log information before the game engine has started. https://github.com/beyond-all-reason/spring/issues/683

Sim:
 - Improved performance of long-range path finding requests (TKPFS)
 - Path data updates faster in response to map changes and can increase the rate dynamically as the
   number of map changes becomes larger (TKPFS)
 - Path data update scaling rate can be adjusted by the new modrule
  `system.pathFinderUpdateRateScale` (default: 1.0) (TKPFS)
 - Path data updates per sim frame loading is better balanced to reduce impact on jitter caused by
   sim frame time variations. (TKPFS)
 - Reduced number of pathing blocks updated on map changes. (TKPFS)
 - Improve performance of path data updates by only updating the pathing block-to-block links that
   are impacted by map changes (previously all links were updated.) (TKPFS)
 - Engine-driven formation move commands now try to match units to nearest appropriate move targets
   so as to have units adopt formations without having to run across each other.
 - edgeEffectiveness can now be 1 (previously capped at 0.999)
 - armor multiplier (aka damageModifier) can now be 0 (previously capped at 0.0001)
 - damage in unit defs can now be 0 (previously capped at 0.0001)
 - damage and armor can also be negative again (like in 0.76b1, so that the target is healed), but keep in mind weapons
   will still always target enemies and never allies, so avoid using it outside of manually-triggered contexts
 - nanoturret (immobile builder) build-range now only needs to reach the edge of the buildee's radius
   instead of its center. Mobile builders already worked this way.
 - Renamed TKPFS to HAPFS. It is HAPFS with modifications and is ready now to take over. It was
   kept separate initially in case major issues were found, but it is now suitably stable to